--- a/html/explorar.html
+++ b/html/explorar.html
@@ -344,7 +344,7 @@
                     <h3 class="ml-3 c-white">EXPLORAR</h3>
 
                 <!-- MUSICA SEGUN TU LUGAR -->
-                    <h5 class="ml-3 mt-3 c-white">MÚSICA SEGÚN TU LUGAR</h5>
+                    <h5 class="ml-3 mt-3 mb-2 c-white">MÚSICA SEGÚN TU LUGAR</h5>
                 <div class="row mt-2 ml-3">
                     <!-- LO ULTIMO -->
                   
@@ -392,16 +392,18 @@
                 <!-- FIN DE MUSICA SEGUN TU LUGAR -->
 
                 <!-- TITULO CATEGORIA -->
-                    <h5 class="ml-3 mt-5 c-white">CATEGORIAS</h5>
+                    <h5 class="ml-3 mt-4 c-white">CATEGORIAS</h5>
                 <!-- FIN TITULO CATEGORIA -->
 
                 <div class="row mt-2 ml-3">
                     <div class="carousel-item active" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-2">
-                                <div class="img-fondo efecto-hover">
-                                    <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
-                                </div>
+                                <a href="explorar-categoria-seleccionada.html">
+                                    <div class="img-fondo efecto-hover">
+                                        <img class="mt-3" src="../img/guitarra-electrica.png" width="40%" height="70%">
+                                    </div>
+                                </a>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">ROCK</h5>
                             </div>
 
